remove report rtl path from web rtl

--- a/web_rtl_codefish/views/templates.xml
+++ b/web_rtl_codefish/views/templates.xml
@@ -6,6 +6,7 @@
             <xpath expr="//html/head/t" position="after">
                 <link t-if="lang_direction == 'rtl'" href="/web_rtl_codefish/static/src/css/bootstrap-rtl.min.css"
                       rel="stylesheet"/>
+                <link t-if="lang_direction == 'rtl'" href="/web_rtl_codefish/static/src/css/rtl.css" rel="stylesheet"/>
             </xpath>
             <xpath expr="//html" position="before">
                 <t t-set="body_classname" t-value="lang_direction + ' ' + (body_classname or '')"/>
