--- a/pos_retail/views/pos_voucher.xml
+++ b/pos_retail/views/pos_voucher.xml
@@ -11,12 +11,18 @@
                         <field name="state" widget="statusbar" clickable="True"/>
                     </header>
                     <sheet>
+                        <div class="oe_title">
+                            <h1>
+                                <field name="number"/>
+                            </h1>
+                        </div>
                         <group>
                             <group>
                                 <field name="code"/>
                                 <field name="start_date"/>
                                 <field name="method"/>
-                                <field name="customer_id" attrs="{'invisible': [('method', '=', 'general')], 'required': [('method', '!=', 'general')]}"/>
+                                <field name="customer_id"
+                                       attrs="{'invisible': [('method', '=', 'general')], 'required': [('method', '!=', 'general')]}"/>
                                 <field name="use_date"/>
                             </group>
                             <group>
@@ -45,6 +51,7 @@
             <field name="model">pos.voucher</field>
             <field name="arch" type="xml">
                 <tree string="Vouchers">
+                    <field name="number"/>
                     <field name="code"/>
                     <field name="customer_id"/>
                     <field name="start_date"/>
@@ -84,9 +91,9 @@
         </record>
 
         <menuitem id="menu_pos_voucher_menu"
-            action="pos_voucher_action"
-            parent="menu_retail"
-            />
+                  action="pos_voucher_action"
+                  parent="menu_retail"
+        />
 
     </data>
 </odoo>
