--- a/codefish_suppliers_info/views/views.xml
+++ b/codefish_suppliers_info/views/views.xml
@@ -7,10 +7,10 @@
             <field name="inherit_id" ref="product_by_supplier.view_product_supplierinfo_tree1"/>
             <field name="arch" type="xml">
               <field name="product_name" position="after">
-                <field name="standard_price"/>
-                <field name="qty_available"/>
-                <field name="total"/>
-
+                  <field name="barcode"/>
+                  <field name="standard_price"/>
+                  <field name="qty_available"/>
+                  <field name="total"/>
               </field>
             </field>
         </record>
