--- a/sr_print_pos_session/reports/pos_session_report_template.xml
+++ b/sr_print_pos_session/reports/pos_session_report_template.xml
@@ -76,7 +76,7 @@
                         </table>-->
 
                         <h2>Summary By Orders</h2>
-                        <table dir="rtl" frame="box">
+                        <table class="table table-condensed table-striped" dir="rtl" frame="box">
                             <thead>
 
                             </thead>
@@ -115,7 +115,7 @@
                                                 </td>
                                             </tr>
                                 </t>
-                                <hr />
+                                <t> <hr/> </t>
 
                             </tbody>
                         </table>
