--- a/codefish_suppliers_info/views/views.xml
+++ b/codefish_suppliers_info/views/views.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0"?>
 <odoo>
 
+       <record id="view_production_lot_tree_attache" model="ir.ui.view">
+            <field name="name">stock.production.lot.tree1</field>
+            <field name="model">stock.production.lot</field>
+            <field name="inherit_id" ref="stock.view_production_lot_tree"/>
+            <field name="arch" type="xml">
+              <field name="name" position="after">
+                  <field name="life_date"/>
+                  <field name="product_ref"/>
+
+
+              </field>
+            </field>
+        </record>
+
         <record id="view_product_supplierinfo_search_attach" model="ir.ui.view">
             <field name="name">product.supplierinfo.search</field>
             <field name="model">product.supplierinfo</field>
@@ -14,37 +28,5 @@
               </field>
             </field>
         </record>
-    <record id="view_pos_orderline_tree" model="ir.ui.view">
-        <field name="name">point_of_sale.orderline.tree</field>
-        <field name="model">pos.order.line</field>
-        <field name="priority">90</field>
-        <field name="view_type">tree</field>
-        <field name="arch" type="xml">
-            <tree string="Order Line" >
-                <field name="order_id"/>
-                <field name="product_id"/>
-                <field name="pack_lot_ids"/>
-                <field name="price_unit"/>
-                <field name="qty"/>
-                <field name="price_subtotal_incl"/>
-                <field name="company_id"/>
 
-            </tree>
-        </field>
-        </record>
-            <record id="action_view_pos_orderline_tree" model="ir.actions.act_window" >
-        <field name="type">ir.actions.act_window</field>
-              <field name="res_model">pos.order.line</field>
-                <field name="name">Order Lines</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">tree</field>
-
-    </record>
-
-         <menuitem
-        id="menu_view_pos_orderline_tree"
-        name="Order Line"
-        sequence="25"
-        action="action_view_pos_orderline_tree"
-        parent="point_of_sale.menu_point_rep"/>
 </odoo>
