--- a/codefish_suppliers_info/views/views.xml
+++ b/codefish_suppliers_info/views/views.xml
@@ -8,7 +8,10 @@
             <field name="arch" type="xml">
               <field name="name" position="after">
                   <field name="life_date"/>
+                  <field name="product_qty"/>
                   <field name="product_ref"/>
+                  <field name="product_barcode"/>
+
 
 
               </field>
