--- a/codefish_suppliers_info/views/views.xml
+++ b/codefish_suppliers_info/views/views.xml
@@ -37,7 +37,7 @@
         <field name="arch" type="xml">
             <tree string="Stock">
                 <field name="product_ref"/>
-                <field name="qty"/>
+                <field name="qty_available"/>
                 <field name="product_id"/>
                 <field name="product_barcode"/>
                 <field name="lot_id"/>
