--- a/codefish_suppliers_info/views/views.xml
+++ b/codefish_suppliers_info/views/views.xml
@@ -40,6 +40,7 @@
                 <field name="qty_available"/>
                 <field name="product_id"/>
                 <field name="product_barcode"/>
+                <field name="qty"/>
                 <field name="lot_id"/>
                 <field name="lot_life_date"/>
             </tree>
